[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/search/search_result_item.gd" id="1"]

[node name="SearchResultItem" type="PanelContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ChannelRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="ChannelLabel" type="Label" parent="VBox/ChannelRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "#channel"

[node name="TimestampLabel" type="Label" parent="VBox/ChannelRow"]
layout_mode = 2
size_flags_horizontal = 8
text = "12:00 PM"

[node name="AuthorLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Author"

[node name="ContentLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Message content preview..."
text_overrun_behavior = 3
